--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongod": "^2.0.0",
     "mongoose": "^5.9.7",
     "nodemon": "^2.0.3",
-    "querystring": "^0.2.0"
+    "querystring": "^0.2.0",
+    "socket.io": "^2.3.0"
   }
 }
